# integrated-photonics

./: .gitignore  README.md  Tectonic.toml  lumapi_autodoc.py  pyproject.toml  pyright-config.json  pyrightconfig.json  task1.m  task2.py  task3_res.py  task3_res_parametric.py  task3_sim.py  task3_sim_parametric.py
+sb4/: get_n.m
+sb4/+planar/: find_modes.m  find_neff.m  find_num_modes.m
data/task3/: sweep_manifest.json
data/task3/sim_0032_130625/: results.json  simulation.fsp
data/task3/sim_0040_130625/: results.json
data/task3/sim_0050_130625/: results.json
data/task3/sim_0100_130625/: results.json
data/task3/sim_0110_120625/: results.json
data/task3/sim_0112_130625/: results.json
data/task3/sim_0118_120625/: results.json
data/task3/sim_0125_130625/: results.json
data/task3/sim_0128_120625/: results.json
data/task3/sim_0138_130625/: results.json
data/task3/sim_0139_120625/: results.json
data/task3/sim_0151_120625/: results.json
data/task3/sim_0152_130625/: results.json
data/task3/sim_0204_120625/: results.json
data/task3/sim_0207_130625/: results.json
data/task3/sim_0217_120625/: results.json
data/task3/sim_0222_130625/: results.json
materials/: GaAs - Adachi 1989.csv
sb4/: __init__.py  __main__.py  results.py  simulation.py  wrapper.py
src/: index.tex  refs.bib  task2.tex  task3.tex
task3/wg1w0p5_wg2w0p5_sep0p15_couplinglen10_wgzspan0p22_fanoutyoff5_sbendxext10_cwl1p55/: results.json
types/: add_partitions.pyi  lumapi.pyi  lumjson.pyi  lumslurm.pyi
types/lumerical/: aws.pyi
types/lumopt/: __init__.pyi  optimization.pyi
(+211 files in other folders)
