[project]
name = "integrated-photonics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "black>=25.1.0",
    "matplotlib>=3.10.3",
    "monkeytype>=23.3.0",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
]
